workspace/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
22:25:02 **** Rebuild of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp:1:20: warning: extra tokens at end of #include directive [enabled by default]
 #include <iostream>;
                    ^
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:25:06 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp:1:20: warning: extra tokens at end of #include directive [enabled by default]
 #include <iostream>;
                    ^
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:34:04 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
Info: Nothing to build for MüAufgaben
Info: Nothing to build for MüAufgaben
22:46:11 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp: In function 'void postIncrement()':
..\Aufgabenpool1.cpp:21:6: warning: unused variable 'j' [-Wunused-variable]
  int j;
      ^
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:46:48 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:47:04 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:47:26 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:49:13 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp: In function 'void postIncrement()':
..\Aufgabenpool1.cpp:28:5: warning: 'j' is used uninitialized in this function [-Wuninitialized]
  ++j;
     ^
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:49:49 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp: In function 'void postIncrement()':
..\Aufgabenpool1.cpp:28:5: warning: 'j' is used uninitialized in this function [-Wuninitialized]
  ++j;
     ^
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:50:10 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:54:14 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:56:21 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
..\Aufgabenpool1.cpp: In function 'void preAndPostIncrement()':
..\Aufgabenpool1.cpp:25:2: error: expected ';' before 'cout'
  cout << i << endl;
  ^
..\Aufgabenpool1.cpp:29:2: error: expected ';' before 'cout'
  cout << j << endl;
  ^
22:57:25 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
22:58:10 **** Incremental Build of configuration Debug for project MüAufgaben ****
Info: Internal Builder is used for build
g++ -O0 -g3 -Wall -c -fmessage-length=0 -o Aufgabenpool1.o "..\\Aufgabenpool1.cpp" 
g++ -o MüAufgaben.exe Aufgabenpool1.o 
